# python_action

./: .coveragerc  .gitignore  Makefile  README.md  make.env  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  deploy.yml  slack.yml  test.yml
.github/workflows/config/: slack.yml
scripts/docker_lintage/: Dockerfile  docker-compose.yaml
scripts/lintage/: complexity.sh  coverage.sh  documentation.sh  run_tests.sh
src/: random_code.py  sample_code.py
tests/unit/: test_example.py  test_random.py
