[tool.poetry]
name = "python_actions"
version = "0.1.0"
description = ""
authors = ["clementbernardd <clementbernardd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
radon = "^5.1.0"
pylint = "^2.15.2"
coverage = "^6.4.4"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"